Add spring as server code

--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,4 +1,5 @@
 <p>This is the partial for view 1.</p>
 <p>Test variable: {{testname}} <br></p>
 <p>Test function: {{printscope()}} <br></p>
+<p>Test function: {{testdatabase()}} <br></p>
 
